Add Post Routes, Controller(s), Models (#17)
* Config DB util to use correct DB

* Add controllers, routes, etc

* Successfully configure POST route for Posts

* Fix missing prop_id in service

* Remove CLOG

* Update cors for prod/dev

* Remove heroky
